# RAYYA

./: CMakeLists.txt  dockerfile  main.cpp
include/: Errors.hpp  IndexCalculus.hpp  NumberUtils.hpp
src/: Errors.cpp  IndexCalculus.cpp  NumberUtils.cpp
